Add build minification and extract string constants
- Add --minify flag to bun build for smaller output
- Extract OOXML/OD namespace prefixes as constants
- Extract COURIER font constant
- Final size: 7.7 KB gzipped (~14x smaller than docx package)

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist --target node && bun run build:cjs && bun run build:types",
-    "build:cjs": "bun build ./src/index.ts --outfile ./dist/index.cjs --target node --format cjs",
+    "build": "bun build ./src/index.ts --outdir ./dist --target node --minify && bun run build:cjs && bun run build:types",
+    "build:cjs": "bun build ./src/index.ts --outfile ./dist/index.cjs --target node --format cjs --minify",
     "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist src/index.ts",
     "test": "bun test",
     "prepublishOnly": "bun run build"
